# ai

./: .dockerignore  .env.local.example  .gitignore  .mise.toml  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CONFIG_CHECKER_IMPLEMENTATION.md  LICENSE  Makefile  PILOT_INTEGRATION.md  README.md  SECURITY.md  VERSIONING_SETUP.md  ai.code-workspace  index.md  mkdocs.serve_local.yaml  mkdocs.yaml  pr-1803-typecheck-findings.md  pr-description.md  pyproject.toml  release-notes.md  release-please-config-hotfix.json  release-please-config.json  release-please-config.release.json  versions.json
connectors/unique_quartr/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
connectors/unique_search_proxy/: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  openapi.json  pyproject.toml
connectors/unique_six/: CHANGELOG.md  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
examples/metadata-extractor/: pyproject.toml
examples/tutorials/: README.md  env.example  pyproject.toml
file_generators/unique_excel_generator/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
postprocessors/unique_follow_up_questions/: CHANGELOG.md  README.md  pyproject.toml
postprocessors/unique_stock_ticker/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
tool_packages/unique_deep_research/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
tool_packages/unique_document_generator/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
tool_packages/unique_internal_search/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini  test_instructions.md
tool_packages/unique_retrieve_search_scope/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
tool_packages/unique_skill_tool/: CHANGELOG.md  README.md  pyproject.toml
tool_packages/unique_swot/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
tool_packages/unique_web_search/: CHANGELOG.md  README.md  constraints-min.txt  pyproject.toml  pytest.ini
tutorials/metadata-extractor/: .env.example  README.md  pyproject.toml
tutorials/unique_basics/: README.md  pyproject.toml
unique_agentic/: README.md  pyproject.toml
unique_agentic/unique_agentic/: __init__.py
unique_client/: ..gitinore.un~  .gitignore  ARCHITECTURE.md  LICENSE  README.md  api.py  demo_requestor_types.py  main.py  pyproject.toml
unique_client/notebooks/: test.json  test.py
unique_client/scripts/: check_generated.sh  generate_routes.py
unique_client/src/: CODEGEN_README.md  endpoint_requestor.py  openapi.json
unique_client/tests/: __init__.py  conftest.py  test_integration.py  test_path_processor.py
unique_client/unique_client/: __init__.py  _base.py  _client.py  _version.py
unique_follow_up_questions/: pyproject.toml
unique_follow_up_questions/unique_follow_up_questions/: config.py  follow_up_postprocessor.py  service.py
unique_mcp/: CHANGELOG.md  README.md  pyproject.toml  zitadel.env.example
unique_mcp/tests/: __init__.py  conftest.py  test_context_provider.py  test_context_requirements.py  test_find_env_file.py  test_internal_search_mapper.py  test_internal_search_meta.py  test_internal_search_provider.py  test_main.py  test_meta_keys.py  test_server.py  test_settings.py  test_tool_meta.py  test_unique_injectors.py  test_zitadel_oauth_proxy.py  test_zitadel_oidc_proxy.py
unique_orchestrator/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
unique_orchestrator/tests/: test_config_gpt55_gpt56_responses_api.py  test_config_gpt55_responses_api.py  test_settings.py  test_skill_setup.py  test_unique_ai_builder_model_choice.py  test_unique_ai_builder_selected_uploaded_files.py  test_unique_ai_builder_uploaded_search.py  test_unique_ai_selected_uploaded_files.py  test_unique_ai_skill_and_reminders.py
unique_orchestrator/unique_orchestrator/: __init__.py  app.py  config.py  config_tools_options.py  debug_event.json  mcp_tool_wrapper.py  open_pdf_feature.py  post_process_responses.py  settings.py  trace_logger.py  unique_ai.py  unique_ai_builder.py  utils.py
unique_sdk/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  coverage_report.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  pytest.ini
unique_sdk/.unique/: mcp-output.jsonl  mcp-refs.jsonl
unique_sdk/claude-cowork-plugin/: README.md
unique_sdk/docs/: api.md  architecture.md  examples.md  getting_started.md  index.md  sdk.md  uniqueql.md  webhooks.md
unique_sdk/examples/: briefing_crud.py  briefing_manual_smoke.py  create_conduct_space_example.py
unique_sdk/scripts/: __init__.py  docs.py
unique_sdk/tests/: .gitignore  conftest.py  test_agentic_table_lifecycle.py  test_api_requestor.py  test_api_resource.py  test_async_fixes.py  test_briefing.py  test_chat_in_space.py  test_config.py  test_content_chunk_unit.py  test_content_info_unit.py  test_error_handling.py  test_file_io_download_content.py  test_file_io_preview_pdf.py  test_folder_info_unit.py  test_folder_move.py  test_http_client.py  test_message_chat_unit.py  test_message_tool.py  test_request_logging.py  test_search_unit.py  test_space_subagents.py  test_space_unique_conduct.py  test_tool.py  test_tool_call.py  test_util.py  test_webhook.py
unique_sdk/unique_sdk/: __init__.py  _api_requestor.py  _api_resource.py  _api_version.py  _client.py  _error.py  _http_client.py  _list_object.py  _object_classes.py  _request_options.py  _unique_object.py  _unique_ql.py  _unique_response.py  _util.py  _version.py  _webhook.py
unique_stock_ticker/: CHANGELOG.md  README.md  pyproject.toml
unique_stock_ticker/unique_stock_ticker/: __init__.py  integrated.py  stock_ticker_postprocessor.py
unique_toolkit/: .coveragerc  .env.test.template  .gitignore  CHANGELOG.md  LICENSE  README.md  analyze_coverage.sh  complete_analysis.sh  coverage.json  coverage_report.md  deps.json  docs.subproject.mkdocs.yaml  entangled.toml  generate_examples.sh  mkdocs.yaml  pyproject.toml  pytest.ini  test_instructions.md  token_counting.py
unique_toolkit/.basedpyright/: baseline.json
unique_toolkit/docs/: api.md  (+11 more)
uqadm/: CHANGELOG.md  README.md  pyproject.toml
(+11384 files in other folders)
