[project]
name = "ai-monorepo"
version = "0.1.1"
description = "AI Monorepo Documentation"
authors = [{ name = "Unique Team" }]
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.11"
dependencies = [
    "unique-toolkit",
    "griffe-pydantic>=1.1.8",
]

[dependency-groups]
dev = [
    # type checking / linting
    "pyright>=1.1.405",
    "ruff>=0.14.2",
    "basedpyright>=1.35.0,<2",
    "langchain>=1.1.0",
    # shared test tools (used across all workspace packages)
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.14.0,<4",
    "deptry>=0.24.0,<0.25",
    "import-linter>=2.0,<3",
    "poethepoet>=0.32.0,<0.33",
    # migrated from per-package dev groups
    "python-dotenv>=1.1.0,<2",
    "openai>=1.105.0,<3",
    "isort>=6.0.1,<7",
    "opik>=1.8.42,<2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocs-monorepo-plugin>=1.1.2",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-callouts>=1.16.0",
    "mkdocstrings-python>=1.16.10",
    "entangled-cli>=2.1.13",
    "mkdocs-entangled-plugin>=0.4.0",
    "mkdocs-codeinclude-plugin>=0.2.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mike>=2.1.3",
]

[tool.uv]
exclude-newer = "2 weeks"
constraint-dependencies = [
    "aiohttp>=3.13.4",
    "copier>=9.14.1",
    "cryptography>=46.0.7",
    "deepdiff>=8.6.2",
    "fastmcp>=3.2.0",
    "langchain-core>=1.2.28",
    "langsmith>=0.7.31",
    "litellm>=1.83.0",
    "lxml>=5.0.0",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "requests>=2.33.0",
]

[tool.uv.exclude-newer-package]
"unique-sdk" = false
"unique-toolkit" = false
"unique-mcp" = false
"unique-orchestrator" = false
"unique-web-search" = false
"unique-internal-search" = false
"unique-swot" = false
"unique-deep-research" = false
"unique-stock-ticker" = false
"unique-follow-up-questions" = false
"unique-six" = false
"unique-search-proxy" = false
"unique-quartr" = false
"cryptography" = "2026-04-09"
"langchain-core" = "2026-04-09"
"langsmith" = "2026-04-15"
"pytest" = "2026-04-08"
"python-multipart" = "2026-04-11"

[tool.uv.sources]
unique-toolkit = { workspace = true }

[tool.uv.workspace]
members = [
    "unique_sdk",
    "unique_toolkit",
    "unique_mcp",
    "unique_orchestrator",
    "tool_packages/*",
    "postprocessors/*",
    "connectors/*",
    "tutorials/mcp/mcp_test",
]

# Root-level poe tasks. Individual workspace packages own their own
# [tool.poe.tasks] blocks; only forward-to-package passthroughs belong here,
# so `uv run poe <task>` works from the repository root as well as from each
# package directory.
[tool.poe.tasks]
check-imports = "lint-imports --config unique_toolkit/pyproject.toml"
