[project]
name = "ai-monorepo"
version = "0.1.1"
description = "AI Monorepo Documentation"
authors = [{ name = "Unique Team" }]
readme = "README.md"
license = "Proprietary"
requires-python = ">=3.11"
dependencies = [
    "unique-toolkit>=2026.32.0",
    "griffe-pydantic>=1.1.8",
]

[dependency-groups]
dev = [
    # type checking / linting
    "pyright>=1.1.405",
    "ruff>=0.14.2",
    "basedpyright>=1.35.0,<2",
    "langchain>=1.1.0",
    # shared test tools (used across all workspace packages)
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.14.0,<4",
    "respx>=0.22,<0.23",
    "deptry>=0.24.0,<0.25",
    "import-linter>=2.0,<3",
    "poethepoet>=0.32.0,<0.33",
    # migrated from per-package dev groups
    "python-dotenv>=1.1.0,<2",
    "openai>=1.105.0,<3",
    "isort>=6.0.1,<7",
    "opik>=1.8.42,<2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocs-monorepo-plugin>=1.1.2",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-callouts>=1.16.0",
    "mkdocstrings-python>=1.16.10",
    # mkdocs-entangled-plugin 0.6.0 still calls entangled.config.read_config()
    # without the filesystem argument added in entangled-cli 2.4.2.
    "entangled-cli>=2.4,<2.4.2",
    "mkdocs-entangled-plugin>=0.4.0",
    "mkdocs-codeinclude-plugin>=0.2.1",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mike>=2.1.3",
]

[tool.uv]
exclude-newer = "2 weeks"
# `docs` pins entangled-cli<2.4.2 (which requires click>=8.3.0), but `dev` (via
# opik → litellm) requires click==8.1.8. They are never installed together,
# so declare them mutually exclusive to let uv resolve each independently.
conflicts = [
    [
        { group = "dev" },
        { group = "docs" },
    ],
]
constraint-dependencies = [
    "aiohttp>=3.14.1",
    "authlib>=1.6.12",
    "copier>=9.14.1",
    "crawl4ai>=0.9.0",
    "cryptography>=48.0.1",
    "deepdiff>=8.6.2",
    "fastmcp>=3.2.0",
    "idna>=3.15",
    "langchain>=1.3.9",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.14",
    "langsmith>=0.8.18",
    # litellm 1.83.5–1.83.13 hard-pin python-dotenv==1.0.1 (upstream regression);
    # 1.83.14 relaxes it; 1.84+ relaxes openai==2.24.0.
    "litellm>=1.84.0",
    "lxml>=6.1.0",
    "mcp>=1.28.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.0.3",
    "python-multipart>=0.0.31",
    "requests>=2.33.0",
    "starlette>=1.3.1",
    "tornado>=6.5.5",
    "urllib3>=2.7.0",
]
# crawl4ai pins lxml>=5.3,<6.dev0; override to 6.x for XXE fix (Dependabot #742).
override-dependencies = [
    "lxml>=6.1.0",
]

[tool.uv.exclude-newer-package]
"unique-sdk" = false
"unique-toolkit" = false
"unique-mcp" = false
"unique-orchestrator" = false
"unique-web-search" = false
"unique-internal-search" = false
"unique-skill-tool" = false
"unique-swot" = false
"unique-deep-research" = false
"unique-stock-ticker" = false
"unique-follow-up-questions" = false
"unique-user-memory" = false
"unique-six" = false
"unique-search-proxy" = false
"unique-search-proxy-core" = false
"unique-search-proxy-sdk" = false
"unique-quartr" = false

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }
unique-search-proxy-core = { workspace = true }
unique-search-proxy-sdk = { workspace = true }

[tool.uv.workspace]
members = [
    "uqadm",
    "unique_sdk",
    "unique_toolkit",
    "unique_mcp",
    "unique_orchestrator",
    "tool_packages/*",
    "postprocessors/*",
    "connectors/unique_quartr",
    "connectors/unique_six",
    "connectors/unique_search_proxy/unique_search_proxy_client",
    "connectors/unique_search_proxy/unique_search_proxy_core",
    "connectors/unique_search_proxy/unique_search_proxy_sdk",
    "tutorials/mcp/mcp_test",
]

# Root-level poe tasks. Individual workspace packages own their own
# [tool.poe.tasks] blocks; only forward-to-package passthroughs belong here,
# so `uv run poe <task>` works from the repository root as well as from each
# package directory.
[tool.poe.tasks]
check-imports = "lint-imports --config unique_toolkit/pyproject.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
