[project]
name = "unique-agentic"
version = "0.0.1"
description = "AI Agent Framework for building intelligent agents"
authors = [
    {name = "Cedric Klinkert", email = "cedric@unique.ch"},
    {name = "Martin Fadler", email = "martin.fadler@unique.ch"},
    {name = "Sadique Sheik", email = "sadique@unique.ch"},
    {name = "Fabian Schläpfer", email = "fabian@unique.ch"},
    {name = "Pascal Hauri", email = "pascal@unique.ch"},
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    # Package-specific dependencies (common ones inherited from workspace)
    "unique-sdk>=0.10.0",
    "unique-toolkit>=0.8.18",
]

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["unique_agentic*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
