[tool.poetry]
name = "unique-python-client"
version = "0.9.31"
description = ""
authors = [
    "cedric klinkert <cedric.klinkert@unique.ai>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11"
]
packages = [{include = "unique_client", from = "unique_client"}]

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.9.0"
requests = "^2.32.3"
pydantic = "^2.10.6"
jsonref = "^1.1.0"
datamodel-code-generator = "^0.31.0"
openapi3-parser = "^1.1.21"
openapi-pydantic = "^0.5.1"
humps = "^0.2.2"
unique-toolkit = "^0.8.50"


[tool.poetry.group.dev.dependencies]
ruff = "0.5.3"
pytest = "^8.0"
tox = "^4.11.4"
pyright = "^1.1.341"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.1.0"
openapi-python-generator = "^1.2.0"
ipykernel = "^6.29.5"
openapi-python-client = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
include = ["unique_sdk"]
exclude = ["build", "**/__pycache__"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        lint
        py311
        py312

    [testenv]
    allowlist_externals = poetry
    commands_pre =
        poetry install --no-root --sync --with dev

    [testenv:py311]
    description = run tests with python 3.11
    basepython = python3.11
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:py312]
    description = run tests with python 3.12
    basepython = python3.12
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:lint]
    description = lint source code
    commands = ruff check {posargs:unique_sdk tests}
"""
