[project]
name = "unique-client"
version = "0.1.0"
description = "OOP wrapper around the Unique SDK for easier programmatic access"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "unique-sdk>=0.10.85,<0.11",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv.sources]
unique-sdk = { path = "../unique_sdk", editable = true }

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "basedpyright>=1.33.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["unique_client"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
