[project]
name = "unique-follow-up-questions"
version = "0.0.3"
description = ""
authors = [
    {name = "Martin Fadler", email = "martin.fadler@unique.ch"},
    {name = "Sadique Sheik", email = "sadique@unique.ch"},
    {name = "Fabian Schläpfer", email = "fabian@unique.ch"},
    {name = "Pascal Hauri", email = "pascal@unique.ch"},
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.9.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "pytest>=8.4.1",
    "jinja2>=3.1.6",
    "pillow>=10.4.0",
    "unique-sdk>=0.10.0",
    "unique-toolkit>=0.8.18",
]



[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["unique_follow_up_questions*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
