[project]
name = "unique-mcp"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cedric Klinkert", email = "cedric@unique.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
]

[project.scripts]
unique-mcp = "unique_mcp:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "diff-cover>=8.0.0",
    "basedpyright>=1.33.0",
    "deptry>=0.24.0",
    "python-dep-tree>=0.19.9",
    "poethepoet>=0.32.0",
]

[tool.pytest.ini_options]
markers = [
    "ai: AI-generated tests",
]

[tool.basedpyright]
# Type checking mode: "off", "basic", "standard", "strict", "recommended", or "all"
typeCheckingMode = "standard"

[tool.deptry]
known_first_party = ["unique_mcp"]

[tool.poe.tasks]
# Run from package directory: uv run poe <task>
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_mcp --cov-report=term-missing"
# Full CI-like checks (with baseline)
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.ruff.lint]
select = ["E"]