[project]
name = "unique-mcp"
version = "0.2.6"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Cedric Klinkert", email = "cedric@unique.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1,<4",
    "httpx>=0.28.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "unique-toolkit>=1.65.2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = []

[tool.uv.sources]
unique-toolkit = { workspace = true }

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.basedpyright]
# Type checking mode: "off", "basic", "standard", "strict", "recommended", or "all"
typeCheckingMode = "standard"

[tool.deptry]
known_first_party = ["unique_mcp"]

[tool.poe.tasks]
# Run from package directory: uv run poe <task>
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_mcp --cov-report=term-missing"
# Full CI-like checks (with baseline)
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.uv]
exclude-newer = "2 weeks"
constraint-dependencies = ["lxml>=5.0.0"]

[tool.uv.exclude-newer-package]
"unique-toolkit" = false

[tool.ruff.lint]
select = ["E"]
