[tool.poetry]
name = "unique_orchestrator"
version = "1.12.02"
description = ""
authors = ["Andreas Hauri <andreas.hauri@unique.ai>"]
readme = ["README.md", "CHANGELOG.md"]
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
typing-extensions = "^4.9.0"
jinja2 = "^3.1.0"
unique-toolkit = "^1.46.0"
unique-stock-ticker = "^1.0.2"
unique-follow-up-questions = "^1.1.2"
unique-internal-search = "^1.2.22"
unique-deep-research = "^3.0.17"
unique-web-search = "^1.10.0"
unique-swot = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
ruff = "^0.11.7"
deptry = "^0.24.0"
basedpyright = "^1.35.0"
poethepoet = "^0.32.0"
unique-sdk = { path = "../unique_sdk" }
unique-toolkit = { path = "../unique_toolkit", develop = true }
unique-stock-ticker = { path = "../postprocessors/unique_stock_ticker", develop = true }
unique-follow-up-questions = { path = "../postprocessors/unique_follow_up_questions", develop = true }
unique-internal-search = { path = "../tool_packages/unique_internal_search", develop = true }
unique-swot = { path = "../tool_packages/unique_swot", develop = true }
unique-web-search = { path = "../tool_packages/unique_web_search", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_orchestrator --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.deptry]
known_first_party = ["unique_orchestrator", "unique_toolkit", "unique_stock_ticker", "unique_follow_up_questions", "unique_internal_search", "unique_deep_research", "unique_web_search", "unique_swot"]
extend_exclude = ["unique_orchestrator/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit", "unique-stock-ticker", "unique-follow-up-questions", "unique-internal-search", "unique-deep-research", "unique-web-search", "unique-swot"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_orchestrator"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
