[project]
name = "unique_orchestrator"
version = "1.22.2"
description = ""
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "Andreas Hauri", email = "andreas.hauri@unique.ai" },
]
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic>=2.8.2,<3",
    "typing-extensions>=4.9.0,<5",
    "jinja2>=3.1.0,<4",
    "unique-toolkit>=2026.18.0.dev0",
    "unique-stock-ticker>=2026.18.0.dev0",
    "unique-follow-up-questions>=2026.18.0.dev0",
    "unique-internal-search>=2026.18.0.dev0",
    "unique-deep-research>=2026.18.0.dev0",
    "unique-web-search>=2026.18.0.dev0",
    "unique-swot>=2026.18.0.dev0",
    "unique-skill-tool>=2026.18.0.dev0",
    "openai>=1.109.1,<3",
    "python-frontmatter>=1.1.0,<2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = []

[tool.uv]
exclude-newer = "2 weeks"

[tool.uv.exclude-newer-package]
"unique-deep-research" = false
"unique-follow-up-questions" = false
"unique-internal-search" = false
"unique-sdk" = false
"unique-stock-ticker" = false
"unique-swot" = false
"unique-toolkit" = false
"unique-skill-tool" = false
"unique-web-search" = false

[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }
unique-stock-ticker = { workspace = true }
unique-follow-up-questions = { workspace = true }
unique-internal-search = { workspace = true }
unique-swot = { workspace = true }
unique-skill-tool = { workspace = true }
unique-web-search = { workspace = true }
unique-deep-research = { workspace = true }

[tool.poe.tasks]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_orchestrator --cov-report=term-missing"
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.deptry]
known_first_party = ["unique_orchestrator", "unique_toolkit", "unique_stock_ticker", "unique_follow_up_questions", "unique_internal_search", "unique_deep_research", "unique_web_search", "unique_swot", "unique_skill_tool"]
extend_exclude = ["unique_orchestrator/tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["unique-toolkit", "unique-stock-ticker", "unique-follow-up-questions", "unique-internal-search", "unique-deep-research", "unique-web-search", "unique-swot", "unique-skill-tool"]
DEP003 = ["unique_toolkit", "unique_stock_ticker", "unique_follow_up_questions", "unique_internal_search", "unique_deep_research", "unique_web_search", "unique_swot", "unique_skill_tool"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_orchestrator"]
exclude = ["**/tests/**", "**/test_*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
