[tool.poetry]
name = "unique_sdk"
version = "0.10.73"
description = ""
authors = [
    "Martin Fadler <martin.fadler@unique.ch>",
    "Konstantin Krauss <konstantin@unique.ch>",
    "Andreas Hauri <andreas@unique.ch>",
]
readme = ["README.md", "CHANGELOG.md"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.11"
typing-extensions = "^4.9.0"
requests = "^2.32.3"
httpx = "^0.28.0"
anyio = "^4.0.0"
aiohttp = "^3.9.0"
regex = "^2024.5.15"
tiktoken = "^0.12.0"
openai = {version = "^1.105.0", optional = true}


[tool.poetry.group.dev.dependencies]
ruff = "0.11.7"
pytest = "^8.0"
tox = "^4.11.4"
basedpyright = "^1.35.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.1.0"
ipykernel = "^7.1.0"
deptry = "^0.24.0"
poethepoet = "^0.32.0"

[tool.poetry.extras]
openai = ["openai"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
known_first_party = ["unique_sdk"]
extend_exclude = ["examples", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openai"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_sdk"]
exclude = ["build", "**/__pycache__", "**/tests/**", "**/test_*.py"]

[tool.poe.tasks]
# Run from package directory: poetry run poe <task>
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_sdk --cov-report=term-missing"
# Full CI-like checks (with baseline)
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        lint
        py311
        py312

    [testenv]
    allowlist_externals = poetry
    commands_pre =
        poetry install --no-root --sync --with dev

    [testenv:py311]
    description = run tests with python 3.11
    basepython = python3.11
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:py312]
    description = run tests with python 3.12
    basepython = python3.12
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:lint]
    description = lint source code
    commands = ruff check {posargs:unique_sdk tests}
"""
