[project]
name = "unique_sdk"
version = "0.10.86"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Martin Fadler", email = "martin.fadler@unique.ch" },
    { name = "Konstantin Krauss", email = "konstantin@unique.ch" },
    { name = "Andreas Hauri", email = "andreas@unique.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11,<4"
dependencies = [
    "typing-extensions>=4.9.0,<5",
    "requests>=2.32.3,<3",
    "httpx>=0.28.0,<0.29",
    "anyio>=4.0.0,<5",
    "aiohttp>=3.9.0,<4",
    "regex>=2024.5.15",
    "tiktoken>=0.12.0,<0.13",
]

[project.optional-dependencies]
openai = [
    "openai>=1.105.0,<2",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "ruff==0.11.7",
    "pytest>=8.0,<9",
    "tox>=4.11.4,<5",
    "basedpyright>=1.35.0,<2",
    "pytest-cov>=4.1.0,<5",
    "pytest-asyncio>=0.24.0,<0.25",
    "python-dotenv>=1.1.0,<2",
    "ipykernel>=7.1.0,<8",
    "deptry>=0.24.0,<0.25",
    "poethepoet>=0.32.0,<0.33",
]

[tool.deptry]
known_first_party = ["unique_sdk"]
extend_exclude = ["examples", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openai"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["unique_sdk"]
exclude = ["build", "**/__pycache__", "**/tests/**", "**/test_*.py"]

[tool.poe.tasks]
# Run from package directory: uv run poe <task>
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_sdk --cov-report=term-missing"
# Full CI-like checks (with baseline)
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    isolated_build = true
    env_list =
        lint
        py311
        py312

    [testenv]
    allowlist_externals = poetry
    commands_pre =
        poetry install --no-root --sync --with dev

    [testenv:py311]
    description = run tests with python 3.11
    basepython = python3.11
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:py312]
    description = run tests with python 3.12
    basepython = python3.12
    commands =
        poetry run pytest --cov=unique_sdk tests/ --import-mode importlib

    [testenv:lint]
    description = lint source code
    commands = ruff check {posargs:unique_sdk tests}
"""
