[project]
name = "unique_sdk"
version = "0.11.8"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Martin Fadler", email = "martin.fadler@unique.ch" },
    { name = "Konstantin Krauss", email = "konstantin@unique.ch" },
    { name = "Andreas Hauri", email = "andreas@unique.ch" },
]
classifiers = [
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11,<4"
dependencies = [
    "typing-extensions>=4.9.0,<5",
    "requests>=2.32.3,<3",
    "httpx>=0.28.0,<0.29",
    "anyio>=4.0.0,<5",
    "aiohttp>=3.9.0,<4",
    "regex>=2024.5.15",
    "tiktoken>=0.12.0,<0.13",
    "click>=8.1.0,<9",
]

[project.scripts]
unique-cli = "unique_sdk.cli.cli:main"

[project.optional-dependencies]
openai = [
    "openai>=1.105.0,<3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.uv]
exclude-newer = "2 weeks"

[dependency-groups]
dev = []

[tool.deptry]
known_first_party = ["unique_sdk"]
extend_exclude = ["examples", "tests"]

[tool.deptry.per_rule_ignores]
DEP002 = ["openai"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]
typeCheckingMode = "recommended"
include = ["unique_sdk"]
exclude = ["build", "**/__pycache__", "**/tests/**", "**/test_*.py"]
allowedUntypedLibraries = ["openai.types.responses", "openai.types.shared_params"]
# Suppress rules that require full annotation coverage of legacy internals —
# out of scope for this SDK; we enforce modern typing syntax via reportDeprecated.
reportAny = "none"
reportExplicitAny = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportMissingParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUnusedCallResult = "none"
reportUnannotatedClassAttribute = "none"
reportImplicitOverride = "none"
reportImplicitStringConcatenation = "none"
reportUnusedParameter = "none"
reportImportCycles = "none"

[tool.pytest.ini_options]
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
markers = [
    "ai: AI-authored or AI-generated tests",
    "asyncio: asyncio tests",
    "integration: integration tests that require API access or credentials",
    "serial: tests that must run serially",
    "unit: unit tests",
    "verified: AI-generated tests with human verification",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.poe.tasks]
# Run from package directory: uv run poe <task>
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"
typecheck = "basedpyright"
depcheck = "deptry ."
coverage = "pytest --cov=unique_sdk --cov-report=term-missing"
# Full CI-like checks (with baseline)
ci-typecheck = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh typecheck" }
ci-coverage = { shell = "bash $(git rev-parse --show-toplevel)/.github/scripts/dev.sh coverage" }

