[project]
name = "unique-stock-ticker"
version = "0.0.4"
description = ""
authors = [
    {name = "Martin Fadler", email = "martin.fadler@unique.ch"},
    {name = "Sadique Sheik", email = "sadique@unique.ch"},
    {name = "Fabian Schläpfer", email = "fabian@unique.ch"},
    {name = "Pascal Hauri", email = "pascal@unique.ch"},
]
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "typing-extensions>=4.9.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.1",
    "unique-sdk>=0.10.0",
    "unique-toolkit>=0.8.18",
    "plotly>=5.24.1",
    "numerize>=0.12",
    "pytest>=8.4.1",
    "cryptography>=45.0.6",
    "pyopenssl>=25.1.0",
]



[tool.uv.sources]
unique-sdk = { workspace = true }
unique-toolkit = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["unique_stock_ticker*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]
